# vapt-harness

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHEATSHEET.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: MYTHOS_SUBSTRATE_PHASE5_ROADMAP_2026-05-28.md  MYTHOS_SUBSTRATE_ROADMAP.md  PHASE5_MOVE3_TOOLCHAIN_CLOSURE_2026-05-28.md  PHASE5_MOVE4_AUTODISCOVERY_2026-05-28.md
harness/agents/: ai_security_reviewer.md  dedup_skeptic.md  exploitability_ladder.md  memory_safety_research.md  reference_hygiene.md  source_mapper.md  web_protocol_research.md
harness/config/: surfaces.yaml
harness/knowledge/: INDEX.md  patterns.yaml  principles.md  scoring.yaml  workflow.md
harness/mcp/: README.md  mcp_manifest.json
harness/probes/: __init__.py  auth_chain_audit.py  base.py  idor_diff.py  rag_poisoning_durability.py  unauth_secret_config.py
harness/rules/: go_security_boundaries.yml  python_security_boundaries.yml
harness/source/: __init__.py  acquire.py
harness/tools/: __init__.py  jwt.py  screenshot.py  sqlmap.py  zap.py
harness/watches/: phase4_fixture.yaml
scripts/: check_engagement_paths.py  osv_populate.py  outcome_ingest.py
vapt/: ONBOARDING.md  requirements-dev.txt
vapt/docs/: HARNESS_CAMPAIGN_CANDIDATE_CONTEXT_2026-05-26.md  HARNESS_CAMPAIGN_LIFECYCLE_GATE_2026-05-26.md  HARNESS_CAMPAIGN_START_ADVISORY_REFRESH_2026-05-26.md  HARNESS_MUTATION_COVERAGE_VALIDATOR_2026-05-26.md  HARNESS_OUTCOME_DRIVEN_TUNING_2026-05-26.md  HARNESS_QUEUE_TO_CANDIDATE_HANDOFF_2026-05-26.md  LLM_OPERATOR_GUIDE.md  VAPT_ENV.md  (+6 more)
(+249 files in other folders)
