[project]
name = "vapt-harness"
version = "0.1.0"
description = "Evidence-gated vulnerability research harness for authorized assessment."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pre-commit>=3.0",
  "detect-secrets>=1.5"
]

[tool.pytest.ini_options]
testpaths = ["vapt/harness/tests"]
pythonpath = ["vapt/harness"]
